# mcp-vibe-coding-package

./: .embedding_config.json  .env.example  .gitignore  Dockerfile  LICENSE  PR-DESCRIPTION.md  README.md  auto_register_tools.py  clean_neo4j.py  decorator_bridge_poc.py  devin_learning.md  docker-compose.yml  hybrid_mcp_server.py  install_embedding_deps.sh  mcp_project_config_mcp-vibe-coding-package.json  mcp_project_config_neo4j-mcp-graph-memory.json  mcp_registry_server.py  mcp_unified_config_lesson_test.json  mcp_unified_config_mcp-vibe.json  mcp_unified_config_testproject.json  mem0_mcp_server.py  minimal_mcp_server.py  neo4j_mcp_server.py  pyproject.toml  run_debug_tests.sh  run_integration_tests.bat  run_integration_tests.sh  start_memory_server.sh  test_neo4j.py
.embeddings/: config.json
backup/: __init__original.py  config_tools_original.py  legacy_graph_manager.py  lesson_memory_tools_original.py  main.py  main_fixed.py
demo_output/: feedback_export.json  ide_optimized_tools.json
demos/: agent_guidance_demo.py  documentation_demo.py  feedback_health_demo.py  function_bundles_demo.py  migration_demo.py  run_demo.py  run_demos.py  standalone_demos.py
docs/: PR_description.md  api_reference.md  function_registry_pattern_plan.md  integration_guide.md  lesson-memory-implementation.md  lesson_memory_container_architecture.md  lesson_memory_integration_plan.md  mcp.md  neo4j_query_builder_usage.md  neo4j_query_validation_integration.md  neo4j_validation_progress.md  phase_5_2_action_plan.md  project-memory-implementation.md  project_memory_integration_plan.md  project_understanding.md  pydantic_implementation_plan.md  pydantic_usage.md  query_builder_best_practices.md  refactoring_plan.md
examples/: .env.example  README_NEO4J_VECTOR.md  neo4j_vector_litellm.py  simple_client.py
src/: __init__.py  embedding_manager.py  graph_manager.py  hybrid_mcp_server.py  litellm_langchain.py  logger.py  main.py  minimal_mcp_server.py  session_manager.py  types.py  utils.py
src/api/: README.md  (+5 more)
tests/: README.md  conftest.py  pytest_validator_regression.py  test_api_validation.py  test_embedding_manager.py  test_neo4j_query_validation.py  test_neo4j_validator_regression.py  test_session_manager.py  test_validation_fix.py
(+157 files in other folders)
