[project]
name = "mcp-vibe-coding-package"
version = "0.1.0"
description = "Agent Memory MCP with Neo4j and mem0"
authors = [
    {name = "Matthew Marino",email = "matthew.asdos@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "mem0ai[graph] (>=0.1.77,<0.2.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "mcp (>=1.5.0,<2.0.0)",
    "neo4j (>=5.28.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
