[tool.poetry]
name = "mcp-vibe-coding-package"
version = "0.1.0"
description = "Agent Memory MCP with Neo4j"
authors = ["Matthew Marino <matthew.asdos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
uvicorn = ">=0.34.0,<0.35.0"
mcp = {extras = ["cli"], version = ">=1.5.0,<2.0.0"}
neo4j = ">=5.28.1,<6.0.0"
openai = ">=1.0.0,<2.0.0"
litellm = "^1.64.1"
langchain = "^0.3.21"
langchain-neo4j = "^0.4.0"
python-dotenv = "^1.1.0"

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
