[project]
name = "mcp-vibe-coding-package"
version = "0.1.0"
description = "Agent Memory MCP with Neo4j"
authors = [{ name = "Matthew Marino", email = "matthew.asdos@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "uvicorn>=0.34.0,<0.35.0",
    "mcp[cli]>=1.5.0,<2.0.0",
    "neo4j>=5.28.1,<6.0.0",
    "openai>=1.0.0,<2.0.0",
    "litellm>=1.64.1,<2",
    "langchain>=0.3.21,<0.4",
    "langchain-neo4j>=0.4.0,<0.5",
    "python-dotenv>=1.1.0,<2",
    "numpy>=2.2.4,<3",
    "pytest>=8.3.5,<9",
    "pydantic>=2.11.2,<3",
    "pytest-asyncio>=0.26.0,<0.27",
]

[dependency-groups]
dev = ["flake8>=7.1.2,<8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src"]
package-dir = {"" = "src"}
